lyrics-service/k8s/overlays/dev/lyrics-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lyrics  
spec:
  rules:
    - host: right.lyrics
      http:
        paths:
          - path: /api/lyrics
            backend:
              serviceName: lyrics-service
              servicePort: 8080
